Initializing the project, adding translation, making primitive routing and http

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,17 @@ dist
 
 # TernJS port file
 .tern-port
+
+.angular
+.angular/
+
+# misc
+/.angular/cache
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
